force-app/main/default/objects/Pricebook2/fields/iMC_Price_Book_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Price_Book_Record_ID__c</fullName>
    <label>iMC Price Book Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>