force-app/main/default/objects/Pricebook2/fields/Modality_Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Modality_Price_Book_ID__c</fullName>
    <externalId>true</externalId>
    <label>Modality Price Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>