force-app/main/default/objects/Pricebook2/recordTypes/iMC_Price_Book.recordType-meta.xml
<RecordType>
    <fullName>iMC_Price_Book</fullName>
    <active>true</active>
    <description>iMeet Central Price Book Records Only</description>
    <label>iMC Price Book</label>
</RecordType>