force-app/main/default/objects/Pricebook2/recordTypes/PGi_Price_Book.recordType-meta.xml
<RecordType>
    <fullName>PGi_Price_Book</fullName>
    <active>true</active>
    <label>PGi-Price Book</label>
</RecordType>