force-app/main/default/objects/Pricebook2/recordTypes/ReadyTalk_Price_Book.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Price_Book</fullName>
    <active>true</active>
    <label>ReadyTalk Price Book</label>
</RecordType>