force-app/main/default/objects/Pricebook2/recordTypes/TalkPoint_Price_Book.recordType-meta.xml
<RecordType>
    <fullName>TalkPoint_Price_Book</fullName>
    <active>true</active>
    <label>TalkPoint Price Book</label>
</RecordType>